examples/manual/proguide/errors/result.bas
'' examples/manual/proguide/errors/result.bas
''
'' NOTICE: This file is part of the FreeBASIC Compiler package and can't
''         be included in other distributions without authorization.
''
'' See Also: https://www.freebasic.net/wiki/wikka.php?wakka=ProPgErrorHandling
'' --------

Print Open ("xzxwz.zwz" For Input As #1)
Sleep
	
